crates/ink/tests/ui/trait_def/fail/definition_super_trait_invalid_2.stderr
error: ink! trait definitions with supertraits are not supported, yet
 --> tests/ui/trait_def/fail/definition_super_trait_invalid_2.rs:8:28
  |
8 | pub trait TraitDefinition: SuperTraitDefinition {
  |                            ^^^^^^^^^^^^^^^^^^^^
